# fcs-plotter

./: README.md  pyproject.toml
config/: config.yaml
doc/: fastplotlib_llms.txt  pyqtgraph_llms.txt
fcs_plotter/: __init__.py  config.py  data_processing.py  logger_setup.py  main.py  main_window.py  path_utils.py
fcs_plotter/plotting/: base.py  factory.py  fastplotlib_plotter.py  matplotlib_plotter.py  pyqtgraph_plotter.py
